<resources>
    <string name="app_name">InvesProperti</string>
    <string name="next">Next</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Cari</string>
    <string name="slide_1_desc">Temukan jenis atau proyek properti yang diinginkan dari daftar properti yang telah terseleksi. Analisis, pahami resiko dan return dari tiap pilihan projek properti yang ada.</string>
    <string name="slide_2_title">Inves</string>
    <string name="slide_2_desc">Investasi pada projek properti secara online. Anda juga dapat menginvestasikan kembali hasil return dari portfolio investasi Anda sebelumnya di InvesProperti.</string>
    <string name="slide_3_title">Bagi Hasil</string>
    <string name="slide_3_desc">Dapatkan potensi passive income secara periodik dari harga sewa properti dan capital gain ketika properti dijual kembali atau diakhir masa proyek pembangunan.</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue with Email</string>
    <string name="desc_logout">Are you sure? You\'ll need to be logged in to get your invite token</string>
    <string name="skip"><u>Skip</u></string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="title_register">Mulai bisnis \ninvestasi properti</string>
    <string name="content_register">Anda bisa mulai investasi properti dengan mudah dan aman mulai dengan 1 juta rupiah</string>
    <string name="login">Login</string>
    <string name="register_text">Register</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="pass">Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="atau_daftar">Atau daftar dengan</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">978808462680963</string>
    <string name="fb_login_protocol_scheme">fb978808462680963</string>
    <string name="saldo">Saldo</string>
    <string name="explore_bisnis_property"><![CDATA[Explore Bisnis & Property]]></string>
    <string name="name">Rizky G. Azhary</string>
    <string name="investor">Investor</string>
    <string name="guest">Guest</string>
    <string name="rp_1juta">Rp. 1juta</string>
    <string name="serenity_residence">Serenity Residence</string>
    <string name="status_investasi">Status Investasi</string>
    <string name="semua">Semua</string>
    <string name="baru">Baru</string>
    <string name="terdanai">Terdanai</string>
    <string name="sedang_berjalan">Sedang Berjalan</string>
    <string name="verifikasi_akun_anda_sekarang">Verifikasi akun anda sekarang!</string>
    <string name="rp_1_350_000_lot">Rp. 1.350.000/lot</string>
    <string name="ide_desain_nrumah_modern_minimalis">Ide Desain \nRumah Modern Minimalis</string>
    <string name="highlight_project">Highlight Project</string>
    <string name="article_amp_news"><![CDATA[Article & News]]></string>
    <string name="portofolio">Portofolio</string>
    <string name="content_portofolio">Silahkan verifikasi akun anda untuk\nmenampilkan portfolio</string>
    <string name="verifikasi_akun">Verifikasi Akun</string>
    <string name="inbox">Inbox</string>
    <string name="content_inbox">Silahkan verifikasi akun anda untuk\nmenampilkan pesan</string>
    <string name="user_profile">User Profile</string>
    <string name="rizkyazhari_gmail_com">rizkyazhari@gmail.com</string>
    <string name="syarat_ketentuan"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="bantuan">Bantuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="keluar">Keluar</string>
    <string name="content_verifikasi">Siapkan KTP anda.\nProses verifikasi akun membutuhkan waktu sekitar 10 menit.</string>
    <string name="lanjut">LANJUT</string>
    <string name="atau_masuk_dengan">Atau masuk dengan</string>
    <string name="product_owner">Product Owner</string>
    <string name="silahkan_pilih">Silahkan pilih peranan anda sebagai:</string>
    <string name="ktp_selfie"><![CDATA[KTP & Selfie]]></string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="info_bank">Info Bank</string>
    <string name="tahap_1">Tahap 1</string>
    <string name="upload_foto_ktp">Upload foto KTP</string>
    <string name="tahap_2">Tahap 2</string>
    <string name="upload_foto_selfie_dengan_ktp">Upload foto selfie dengan KTP</string>
    <string name="biodata">Biodata</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tempat_lahir">Tempat lahir</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="deskripsi_pekerjaan">Deskripsi Pekerjaan</string>
    <string name="deskripsi_pekerjaan_optional">Deskripsi Pekerjaan (Optional)</string>
    <string name="status_pernikahan">Status Pernikahan</string>
    <string name="nama_pasangan">Nama Pasangan</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="kontak">Kontak</string>
    <string name="_62">+62</string>
    <string name="alamat_sesuai_ktp">Alamat Sesuai KTP</string>
    <string name="provinsi">Provinsi</string>
    <string name="kota">Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kodepos">Kodepos</string>
    <string name="sama_dengan_ktp">Sama dengan KTP</string>
    <string name="legal">Legal</string>
    <string name="no_ktp">No KTP</string>
    <string name="_12_345_678_9_123_456">12.345.678.9-123.456</string>
    <string name="nama_gadis_ibu_kandung">Nama Gadis Ibu Kandung</string>
    <string name="nama_ahli_waris">Nama Ahli Waris</string>
    <string name="hubungan_dengan_ahli_waris">Hubungan Dengan Ahli Waris</string>
    <string name="profil_resiko">Profil Resiko</string>
    <string name="perhatian">Perhatian!</string>
    <string name="perhatian_content"> Peraturan OJK 37 Tahun 2018 Pasal 42 ayat 2 &amp; 3 (2)
        \nKriteria Pemodal sebagaimana dimaksud pada ayat (1) meliputi: 
        \n\na. Setiap Pemodal dengan penghasilan sampai dengan Rp. 500.000.000,00 (lima ratus juta rupiah) per tahun, dapat membeli saham melalui Layanan Urun Dana paling banyak sebesar 5% (lima persen) dari penghasilan per tahun dan 
        \n\nb. Setiap Pemodal dengan penghasilan lebih dari Rp. 500.000.000,00 (lima ratus juta rupiah) per tahun, dapat membeli saham melalui Layanan Urun Dana paling banyak sebesar 10% (sepuluh persen) dari penghasilan per tahun
        \n\nc. Kriteria Pemodal dan batasan pembelian saham oleh Pemodal sebagaimana dimaksud pada ayat (2) tidak berlaku dalam hal Pemodal merupakan: 
        \n      a. Badan hukum; dan 
        \n      b. Pihak yang mempunyai pengalaman berinvestasi di Pasar Modal yang dibuktikan dengan kepemilikan rekening Efek paling sedikit 2 (dua) tahun sebelum penawaran saham</string>
    <string name="_8123456789">8123456789</string>
    <string name="pendapatan_tahunan">Pendapatan Tahunan</string>
    <string name="rp">Rp.</string>
    <string name="sumber_pendanaan">Sumber Pendanaan</string>
    <string name="tujuan_investasi">Tujuan Investasi</string>
    <string name="memiliki_rekening_efek">Memiliki Rekening Efek?</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="nama_pemilik_bank">Nama Pemilik Rekening</string>
    <string name="no_rekening">No Rekening</string>
    <string name="verifikasi_data">VERIFIKASI DATA</string>
    <string name="terima_kasih">Terima kasih</string>
    <string name="verifikasi_complete">Verifikasi data anda sudah kami terima dan\nsedang dalam proses pemeriksaan</string>
    <string name="rp_3_244_050_000">Rp. 3.244.050.000</string>
    <string name="_44_hari_lagi"><u>44 hari lagi</u></string>
    <string name="_7000_lot">7000 lot</string>
    <string name="unduh_prospektus">Unduh Prospektus</string>
    <string name="detail_product_content">Yellow Carwash merupakan sebuah chain carwash yang bergerak dibidang usaha jasa pencucian mobil, termasuk sistem manajemennya. Berdiri pertama kali di Tanjung Duren, Jakarta sejak tahun 2007. Telah berjalan lebih dari 13 tahun dan terus berkembang hingga saat ini memiliki 8 outlet. Selengkapnya</string>
    <string name="open_maps">Open Maps</string>
    <string name="beli">BELI</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="tarik_saldo">Tarik Saldo</string>
    <string name="jumlah_aset">Jumlah Aset</string>
    <string name="investasi">Investasi</string>
    <string name="anda_belum_memiliki_investasi">Anda belum memiliki investasi</string>
    <string name="jelajahi_bisnis">Jelajahi bisnis</string>
    <string name="yellow_carwash_galuhmas_pt_yukari">Yellow Carwash Galuhmas - PT Yukari...</string>
    <string name="last_price">Last Price</string>
    <string name="rp_1_350_000">Rp. 1.350.000</string>
    <string name="me">Me</string>
    <string name="lupa_password"><u>Lupa password?</u></string>
    <string name="pindai_sidik_jari">Pindai Sidik Jari</string>
    <string name="batal">Batal</string>
    <string name="login_lebih_cepat_dan_aman_dengan_sidik_jari">Login lebih cepat\ndan aman dengan Sidik Jari</string>
    <string name="lewati">Lewati</string>
    <string name="aktifkan">Aktifkan</string>
    <string name="explore_bisnis_properti"><![CDATA[Explore Bisnis & Properti]]></string>
    <string name="harga_lot_awal">Harga lot awal</string>
    <string name="_0">0</string>
    <string name="text_peringatan">Jumlah pembelian melebihi batas investasi\nberdasarkan penghasilan tahunan anda</string>
    <string name="ketentuan">Harap membaca Ketentuan Investasi Penawaran Efek Bersifat Ekuitas Berupa Saham ini (“Ketentuan”) dengan seksama sehubungan dengan investasi yang Anda pilih dalam Platform. Apabila Anda memiliki keragu-raguan dengan Ketentuan ini, harap untuk dapat berkonsultasi terlebih dahulu dengan Kami. Atau Anda dapat memutuskan untuk tidak melanjutkan proses setelahnya untuk penggunaan Platform.\n\nMenyetujui,</string>
    <string name="syarat">Dengan ini saya telah membaca, memahami, dan menyetujui hal-hal yang tercantum pada Ketentuan Investasi InvesProperti</string>
    <string name="saldo_tidak_cukup">Saldo anda tidak cukup. Silahkan lakukan pengisian.</string>
    <string name="string_payment_complete">Terima kasih, pembayaran anda sedang kami proses.\n\nJika sudah kami terima, Lot pembelian anda akan muncul di halaman Portfolio.</string>
    <string name="string_quesioner">Selamat datang di <font color='#3DB991;'>InvesProperti.id</font>\n\nSebelum memulai perjalanan kamu disini, alangkah baiknya mengenal dirimu sendiri terlebih dahulu.</string>
    <string name="string_quesioner_02">Apakah keinginan yang ingin kamu capai\ndari <font color='#3DB991;'>berinvestasi</font>?</string>
    <string name="string_quesioner_03">Kapan kau ingin mewujudkan/memakai\n<font color='#3DB991;'>keinginan tersebut</font>?</string>
    <string name="string_quesioner_03_1">Apa pekerjaan mu <font color='#3DB991;'>saat ini</font>?</string>
    <string name="string_quesioner_04">Apakah kamu saat ini sudah <font color='#3DB991;'>menikah</font> atau\n<font color='#3DB991;'>masih sendiri</font>?</string>
    <string name="no_inbox">Tidak ada pesan</string>
</resources>