<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3">

    <TextView
        android:id="@+id/tvTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/inbox"
        android:textColor="#1D1D1B"
        android:textSize="20sp"
        android:textStyle="normal"
        android:fontFamily="@font/titilliumweb_bold"/>

    <ImageView
        android:id="@+id/img_cs"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:src="@drawable/ic_cs_black"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="21dp"/>

    <LinearLayout
        android:visibility="visible"
        android:id="@+id/layoutGuest"
        android:layout_below="@+id/tvTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_portofolio"
            android:layout_width="211.5dp"
            android:layout_height="211.5dp"
            android:layout_marginTop="106dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_ilustration_2"
            android:layout_marginBottom="55dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5.83dp"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
            android:text="@string/content_inbox"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:fontFamily="@font/titilliumweb_regular"/>

        <RelativeLayout
            android:id="@+id/btn_verifikasi"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/bg_round_green"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/verifikasi_akun"
                android:textAppearance="@style/button"
                android:lineSpacingExtra="1sp"
                android:gravity="center"
                android:fontFamily="@font/titilliumweb_regular"
                />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/layoutInvestor"
        android:layout_below="@+id/tvTitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_inbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="26dp"
            android:layout_marginEnd="26dp"/>

        <LinearLayout
            android:id="@+id/layout_no_inbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="211.5dp"
                android:layout_height="211.5dp"
                android:layout_marginTop="106dp"
                android:src="@drawable/bg_ilustration_2"
                android:layout_marginBottom="50dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5.83dp"
                android:gravity="center"
                android:lineSpacingExtra="0sp"
                android:text="@string/no_inbox"
                android:textColor="@color/Black"
                android:textSize="16sp"
                android:fontFamily="@font/titilliumweb_regular"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>