<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".presentation.portofolio.ExploreBisnisPropertiActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="2dp"
        android:paddingEnd="16dp"
        android:paddingBottom="2dp"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        tools:layout_editor_absoluteX="0dp">

        <FrameLayout
            android:id="@+id/btn_semua"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:background="@drawable/bg_round_tab">

            <TextView
                android:id="@+id/tv_semua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/titilliumweb_bold"
                android:gravity="center"
                android:text="@string/semua"
                android:textColor="@color/black_primary"
                android:textSize="12sp" />

        </FrameLayout>


        <FrameLayout
            android:id="@+id/btn_baru"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/bg_round_tab_normal">

            <TextView
                android:id="@+id/tv_baru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/titilliumweb_regular"
                android:gravity="center"
                android:text="@string/baru"
                android:textColor="@color/black_primary"
                android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_sedang_berjalan"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/bg_round_tab_normal">

            <TextView
                android:id="@+id/tv_sedang_berjalan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/titilliumweb_regular"
                android:gravity="center"
                android:text="@string/sedang_berjalan"
                android:textColor="@color/black_primary"
                android:textSize="12sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/btn_terdanai"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/bg_round_tab_normal">

            <TextView
                android:id="@+id/tv_terdanai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/titilliumweb_regular"
                android:gravity="center"
                android:text="@string/terdanai"
                android:textColor="@color/black_primary"
                android:textSize="12sp" />

        </FrameLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_explore_bisnis"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_tab" />

</androidx.constraintlayout.widget.ConstraintLayout>